--- a/src/main/resources/templates/adminDashBoard/fragments/ordersContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/ordersContent.html
@@ -58,15 +58,15 @@
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" id="paid-tab" data-bs-toggle="tab"
                                 data-bs-target="#paid" type="button" role="tab" data-status="PAID">
-                            Paid<span class="badge bg-light text-dark ms-2" id="paidCount">0</span>
+                            PAID<span class="badge bg-light text-dark ms-2" id="paidCount">0</span>
                         </button>
                     </li>
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="cancelled-tab" data-bs-toggle="tab"
-                                data-bs-target="#cancelled" type="button" role="tab" data-status="CANCELLED">
-                            Cancelled<span class="badge bg-light text-dark ms-2" id="cancelledCount">0</span>
-                        </button>
-                    </li>
+<!--                    <li class="nav-item" role="presentation">-->
+<!--                        <button class="nav-link" id="cancelled-tab" data-bs-toggle="tab"-->
+<!--                                data-bs-target="#cancelled" type="button" role="tab" data-status="CANCELLED">-->
+<!--                            Cancelled<span class="badge bg-light text-dark ms-2" id="cancelledCount">0</span>-->
+<!--                        </button>-->
+<!--                    </li>-->
                 </ul>
 
                 <div class="tab-content p-0" id="orderTabsContent">
@@ -100,34 +100,34 @@
                         </div>
                     </div>
 
-                    <!-- Cancelled Tab -->
-                    <div class="tab-pane fade" id="cancelled" role="tabpanel">
-                        <div id="cancelledTableWrapper">
-                            <div class="table-responsive border-0">
-                                <table class="table table-dark-gray align-middle p-4 mb-0 table-hover">
-                                    <thead>
-                                        <tr>
-                                            <th>Order ID</th>
-                                            <th>Amount</th>
-                                            <th>Order Type</th>
-                                            <th>Status</th>
-                                            <th>Order Date</th>
-                                            <th>Note</th>
-                                            <th>Username</th>
-                                            <th>Action</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="cancelledTableBody">
-                                    <!-- Data will be loaded here -->
-                                    </tbody>
-                                </table>
-                            </div>
-                            <!-- Pagination for Cancelled -->
-                            <div id="cancelledPagination" class="pagination-container">
-                                <!-- Pagination will be loaded here -->
-                            </div>
-                        </div>
-                    </div>
+<!--                    &lt;!&ndash; Cancelled Tab &ndash;&gt;-->
+<!--                    <div class="tab-pane fade" id="cancelled" role="tabpanel">-->
+<!--                        <div id="cancelledTableWrapper">-->
+<!--                            <div class="table-responsive border-0">-->
+<!--                                <table class="table table-dark-gray align-middle p-4 mb-0 table-hover">-->
+<!--                                    <thead>-->
+<!--                                        <tr>-->
+<!--                                            <th>Order ID</th>-->
+<!--                                            <th>Amount</th>-->
+<!--                                            <th>Order Type</th>-->
+<!--                                            <th>Status</th>-->
+<!--                                            <th>Order Date</th>-->
+<!--                                            <th>Note</th>-->
+<!--                                            <th>Username</th>-->
+<!--                                            <th>Action</th>-->
+<!--                                        </tr>-->
+<!--                                    </thead>-->
+<!--                                    <tbody id="cancelledTableBody">-->
+<!--                                    &lt;!&ndash; Data will be loaded here &ndash;&gt;-->
+<!--                                    </tbody>-->
+<!--                                </table>-->
+<!--                            </div>-->
+<!--                            &lt;!&ndash; Pagination for Cancelled &ndash;&gt;-->
+<!--                            <div id="cancelledPagination" class="pagination-container">-->
+<!--                                &lt;!&ndash; Pagination will be loaded here &ndash;&gt;-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
 
                 </div>
             </div>
