--- a/src/main/resources/templates/homePage/fragments/notificationsContent.html
+++ b/src/main/resources/templates/homePage/fragments/notificationsContent.html
@@ -93,9 +93,38 @@
                 font-size: 0.875rem;
             }
         }
+        .full-height-row {
+            align-items: stretch !important;
+            height: 100%;
+        }
+        .container-full-height {
+            height: 100%;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+        .sidebar-full-height {
+            height: 100%;
+            min-height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+        .main-content-full-height {
+            height: 100%;
+            min-height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+        html, body {
+            height: 100%;
+        }
     </style>
-    <div class="container py-4">
-        <!-- Page Header & Actions -->
+    <div class="container container-full-height py-4">
+        <div class="row align-items-stretch full-height-row" style="height:100%;">
+            <div class="col-lg-3 sidebar-full-height">
+                <div th:replace="~{homePage/fragments/profileSidebarFragment :: profileSidebar}"></div>
+            </div>
+            <div class="col-lg-9 main-content-full-height">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <div>
                 <h1 class="h3 mb-0 text-gray-800">
@@ -256,6 +285,8 @@
                     </li>
                 </ul>
             </nav>
+                </div>
+            </div>
         </div>
     </div>
     </section>
